--- a/dot_config/private_mpv/mpv.conf
+++ b/dot_config/private_mpv/mpv.conf
@@ -1,6 +1,5 @@
 vo=gpu
-osc=no
-hwdec=auto
+hwdec=vaapi
 background=0.0666/0.0784/0.0863
 gpu-context=wayland
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
