--- a/dot_config/fusuma/config.yml
+++ b/dot_config/fusuma/config.yml
@@ -14,13 +14,13 @@ swipe:
     right:
       command: "playerctl next"
     up:
-      command: "pactl set-sink-volume 0 +1%" # Switch to next workspace
-      threshold: 0.05
-      interval: 0.01
+      command: "pactl set-sink-volume @DEFAULT_SINK@ +3%" # Switch to next workspace
+      threshold: 0.01
+      interval: 0.1
     down:
-      command: "pactl set-sink-volume 0 -1%" # Switch to next workspace
-      threshold: 0.05
-      interval: 0.01
+      command: "pactl set-sink-volume @DEFAULT_SINK@ -3%" # Switch to next workspace
+      threshold: 0.01
+      interval: 0.1
 pinch:
   in:
     command: "xdotool keydown ctrl click 4 keyup ctrl" # Zoom in
