--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -60,7 +60,7 @@ exec swayidle -w \
 # Example configuration:
 #
 input type:touchpad {
-#       dwt enabled
+       dwt disable
        tap enabled
        natural_scroll enabled
 #       middle_emulation enabled
@@ -203,9 +203,9 @@ mode "resize" {
 bindsym --to-code $mod+r mode "resize"
  
 bindsym --to-code $mod+l exec $fancy_lock
-bindsym --to-code XF86AudioMute exec amixer set Master toggle 
-bindsym --to-code XF86AudioLowerVolume exec amixer set Master 1%-
-bindsym --to-code XF86AudioRaiseVolume exec amixer set Master 1%+
+bindsym --to-code XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym --to-code XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1%
+bindsym --to-code XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1%
 bindsym --to-code XF86MonBrightnessDown exec light -U 10
 bindsym --to-code XF86MonBrightnessUp exec light -A 10
 
