--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -4,6 +4,10 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+set $sway_dir ~/.config/sway
+
+include $sway_dir/colorsheme
+
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
@@ -15,23 +19,35 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term foot
+
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu exec env TERMINAL_COMMAND="foot -e"  $term --app-id=launcher -e sway-launcher-desktop
-
-set $sway_dir ~/.config/sway
+#set $menu exec env TERMINAL_COMMAND="foot -e"  $term --app-id=launcher -e sway-launcher-desktop
+set $menu exec dmenu_run -fn 'Ubuntu mono-20' -l 10 -p "dmenu:" -i -sb "$base0D" -sf "$base00" -nb "$base00"
 
 set $fancy_lock  "swaylock -f --image ~/.config/sway/bg.jpg --clock --effect-vignette 0.5:0.5 --grace 2 --fade-in 0.2"
 
 for_window [app_id="launcher"] floating enable, sticky enable, resize set width 30ppt, resize set height 60ppt, border pixel 10
 for_window [title="^Picture in Picture$"] floating enable, sticky enable, resize shrink width 70ppt, resize shrink height 70ppt
 for_window [app_id="^mpv$"] floating enable, sticky enable, resize shrink width 70ppt, resize shrink height 70ppt
+for_window [app_id="^org.rncbc.qjackctl$"] floating enable
+for_window [title="Graph — QjackCtl"] floating disable 
+
+assign [title="- Opera$"] workspace 2
+assign [app_id="^org.telegram.desktop$"] workspace 2
+for_window [app_id="^org.telegram.desktop$"] [app_id="^org.telegram.desktop$"] focus
+assign [class="^Zulip$"] workspace 2
+for_window [class="^Zulip$"] [class="^Zulip$"] focus
+assign [app_id="^evolution$"] workspace 4
+for_window [app_id="^evolution$"] [app_id="^evolution$"] focus
+
+focus_follows_mouse no
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output eDP-1 mode 2560x1600@60.008Hz 
+output eDP-1 scale 1 mode 2560x1600@60.008Hz 
 output * bg $sway_dir/bg.jpg fill
 #
 # Example configuration:
@@ -141,6 +157,9 @@ input type:keyboard {
     bindsym --to-code $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+
+    bindgesture swipe:3:right workspace next
+    bindgesture swipe:3:left workspace prev
 #
 # Layout stuff:
 #
@@ -231,8 +250,6 @@ bar {
     }
 }
 
-include $sway_dir/colorsheme
-
 # Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
 client.focused          $base05 $base0D $base00 $base0D $base0D
@@ -242,11 +259,15 @@ client.urgent           $base08 $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
 
+font pango: Ubuntu Mono 16
+
 gaps inner 10
 
 include /etc/sway/config.d/*
 
 exec zulip
 exec sh -c "sleep 3; telegram-desktop -startintray"
+exec opera
+exec evolution
 
 exec $term
