--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -18,12 +18,11 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term foot
+set $term kitty
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-#set $menu exec env TERMINAL_COMMAND="foot -e"  $term --app-id=launcher -e sway-launcher-desktop
 set $menu exec dmenu_run -fn 'Ubuntu mono-20' -l 10 -p "dmenu:" -i -sb "$base0D" -sf "$base00" -nb "$base00"
 
 set $fancy_lock  "swaylock -f --image ~/.config/sway/bg.jpg --clock --effect-vignette 0.5:0.5 --grace 2 --fade-in 0.2"
@@ -158,8 +157,6 @@ input type:keyboard {
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 
-    bindgesture swipe:3:right workspace next
-    bindgesture swipe:3:left workspace prev
 #
 # Layout stuff:
 #
